src/Feature Apex Trigger Assignment/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_ID__c</fullName>
        <label>Attendee ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <inlineHelpText>Enter your Role</inlineHelpText>
        <label>Job Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees (Session)</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Session__c</fullName>
        <label>Training Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees (Training Session)</relationshipLabel>
        <relationshipName>Attendees1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Number__c</columns>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>Training_Session__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Salutation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_Email_Format</fullName>
        <active>false</active>
        <description>Ensure the email address follows a proper format</description>
        <errorConditionFormula>NOT( REGEX( Email__c , &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;))</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Please Enter a valid Email Address (e.g,name@example.com)</errorMessage>
    </validationRules>
</CustomObject>